--- a/data/capabilities.yml
+++ b/data/capabilities.yml
@@ -23,22 +23,31 @@ Heater: A Pokemon with the Heater Capability is always warm.
 Icestep: Pokemon with the Icestep Capability treat Icy or Snowy terrain as Basic Terrain.
 Impenetrable: A Pokemon with Impenetrable has an unbreakable barrier around their skin. It subtracts an additional 40 damage from all Moves that hit them. Impenetrable cacn be altered further to have even more resistance to harm, or less.
 Inflatable: A Pokemon with the capability Inflatable can expand its size up to 125% of its normal size. While Inflated, a Pokemon does not change its weight. To hit an Inflated Pokemon, you must roll -3 during Accuracy Check. While Inflated, a Pokemon become Blocking Terrain, you may not target through an Inflated Pokemon. If a Pokemon learns the Move Growth or Stockpile and does not have the Inflatable Capability, they gain Inflatable.
-Intelligence: The Intelligence Capability is paired with a number from 1 to 7 that defines the Pokemon's competence when it comes to simple thought. The Intelligence is an average expectancy of all members of that Pokemon's species. The smarter the Pokemon is, the easier it is to act on their own accord if you can't command them. This also means that the Species of Pokemon is more competent in the wild and a greater threat to the average Trainer.
-Intelligence (Chart): "Intelligence 1: Feeble-mindedness - Slow reaction time, unable to do simple tasks.
-Intelligence 2: Deficiency - Self-aware.
-Intelligence 3: Dullness - Can't figure out tasks by self, but can follow instructions.
-Intelligence 4: Normal - Can build and use tools.
-Intelligence 5: Superior - Average human intellect.
-Intelligence 6: Vastly Superior - Able to function as a leader, act by self.
-Intelligence 7: Genius - Super Computer thought, human languages."
+Intelligence:
+  description: The Intelligence Capability is paired with a number from 1 to 7 that defines the Pokemon's competence when it comes to simple thought. The Intelligence is an average expectancy of all members of that Pokemon's species. The smarter the Pokemon is, the easier it is to act on their own accord if you can't command them. This also means that the Species of Pokemon is more competent in the wild and a greater threat to the average Trainer.
+  chart:
+    1: Feeble-mindedness - Slow reaction time, unable to do simple tasks.
+    2: Deficiency - Self-aware.
+    3: Dullness - Can't figure out tasks by self, but can follow instructions.
+    4: Normal - Can build and use tools.
+    5: Superior - Average human intellect.
+    6: Vastly Superior - Able to function as a leader, act by self.
+    7: Genius - Super Computer thought, human languages."
 Invisibility: Pokemon who have the Invisibility Capability can turn invisible. Pokemon may not perform Moves while invisible. While invisible, you must roll +4 during Accuracy Checks to hit the Pokemon. When a Pokemon turns invisible, they can only remain invisible for up to 4 minutes. After becoming visible, they must wait two plus the number of minutes they spent invisible before turning invisible again.
 Juicer: When Shuckle is holding a berry, after 24 hours of that Berry going unused, it will be juiced and stored in the Shuckle's shell. The Berry Juice is a held item that can be taken from the shuckle and given to another pokemon. It will have all of the properties of the berry it was made from, except that any HP or PP recovery total will be doubled. If the Berry Juice item is left in the Shuckle's shell unused for two weeks, the Berry Juice will be condensed into a Rare Candy.
-Jump: The Jump Capability is paired with a number from 1 to 10 that states the max height the Pokemon can jump into the air in a single bound. If your Pokemon utilizes their Jump Capability during a round of an encounter, it counts as their Shift for that round. Keep in mind you don't have to jump straight upwards. If a Pokemon learns the Move Bounce their Jump value is raised 1.
-Jump (Chart): "Jump 1: 3 ft - 1 m           Jump 6: 25 ft - 7.6 m
-Jump 2: 6 ft - 1.8 m       Jump 7: 35 ft - 10.6 m
-Jump 3: 10 ft - 3 m         Jump 8   50 ft - 15.2 m
-Jump 4: 15 ft - 4.5 m     Jump 9   70 ft - 21 m
-Jump 5: 20 ft - 6 m        Jump 10  100 ft - 30.5 m"
+Jump:
+  description: The Jump Capability is paired with a number from 1 to 10 that states the max height the Pokemon can jump into the air in a single bound. If your Pokemon utilizes their Jump Capability during a round of an encounter, it counts as their Shift for that round. Keep in mind you don't have to jump straight upwards. If a Pokemon learns the Move Bounce their Jump value is raised 1.
+  chart:
+    1: 3 ft - 1 m
+    2: 6 ft - 1.8 m
+    3: 10 ft - 3 m
+    4: 15 ft - 4.5 m
+    5: 20 ft - 6 m
+    6: 25 ft - 7.6 m
+    7: 35 ft - 10.6 m
+    8: 50 ft - 15.2 m
+    9: 70 ft - 21 m
+    10: 100 ft - 30.5 m
 Magnetic: Magnetic Pokemon can lightly manipulate magnetic fields. With this, they can repel iron and/ or steel or attract iron and/or steel, holding it too their body or pushing it away. Through this magnetic manipulation, they can also feel magnetic fields and discern north. If a Pokemon learns the Move Magnet Rise or Magnet Bomb and does not have the Magnetic Capability, they gain Magnetic.
 Materializer: The Materializer can form rock, normal sedimentary rock, from nothing. It can be anywhere from the size of a pebble to the size of a human sized boulder. For every 2.5 grams, or 5 pounds, of rock formed the Pokemon loses 2 HP. The Rock is formed adjacent to the Pokemon and a Pokemon can only add up to 25 grams, or 50 pounds, of rock over 1 round in place of a Move during their turn in an encounter. If a Pokemon learns the Move Rock Wrecker and does not have the Materializer Capability, they gain Materializer.
 Mind Lock: Pokemon who have the Capability Mind Lock cannot have their minds read.
